<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252323"
    tools:context=".IdentifyTheCarMakeActivity">

    <ImageView
        android:id="@+id/carImg"
        android:layout_width="314dp"
        android:layout_height="243dp"
        android:contentDescription="@string/car_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/selectModel_header"
        android:layout_width="123dp"
        android:layout_height="32dp"
        android:text="@string/select_a_model"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImg"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="311dp"
        android:layout_height="32dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <Spinner
        android:id="@+id/modelList"
        android:layout_width="174dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectModel_header"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/submit"
        android:layout_width="124dp"
        android:layout_height="46dp"
        android:background="#FFEB3B"
        android:onClick="identify"
        android:text="@string/identify"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelList"
        app:layout_constraintVertical_bias="0.795" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="124dp"
        android:layout_height="46dp"
        android:background="#FFEB3B"
        android:onClick="next"
        android:textStyle="bold"
        android:text="@string/next"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelList"
        app:layout_constraintVertical_bias="0.795" />

    <ImageView
        android:id="@+id/modelLogo"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:contentDescription="@string/model_logo_todo"
        app:layout_constraintBottom_toBottomOf="@+id/modelList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectModel_header"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/answerCheck"
        android:layout_width="318dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelList"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="318dp"
        android:layout_height="47dp"
        android:background="#FFEB3B"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelList"
        app:layout_constraintVertical_bias="0.696" />

</androidx.constraintlayout.widget.ConstraintLayout>